fix class hierarchy (ongoing)